--- a/1.html
+++ b/1.html
@@ -4,11 +4,14 @@
 <title>1. married with children</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="./style.css">
+<script
+  src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">30th anniversary</a></h1>
   <div id="grid">
     <ol>
+      <input type="button" value="night" onclick="nightModeHandler(this);">
       <li><a href ="1.html">married with children</a></li>
       <li><a href ="2.html">roll with it</a></li>
       <li><a href ="3.html">the masterplan</a></li>
